--- a/app/assets/styles/master.css
+++ b/app/assets/styles/master.css
@@ -59,9 +59,6 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-
-  max-width: 100%;
-  max-height: 100%;
 }
 
 ::selection {
@@ -69,10 +66,17 @@
   color: white !important;
 }
 
+html {
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
 html,
 body,
 .page {
   scroll-behavior: smooth;
+  width: 100vw;
+  height: 100%;
 }
 
 body {
@@ -108,8 +112,6 @@ select {
 
 button,
 input {
-  cursor: pointer;
-
   &:hover {
     opacity: 0.9;
     scale: 1.02;
@@ -155,6 +157,7 @@ textarea[disabled] {
   min-width: fit-content;
   font-weight: 800;
   border: none;
+  color: white !important;
 
   &:hover {
     scale: 1.02;
@@ -168,7 +171,6 @@ textarea[disabled] {
 
   &.primary {
     background: var(--primary-normal) !important;
-    color: white !important;
 
     &:hover {
       background: var(--primary-normal-hover) !important;
@@ -177,7 +179,6 @@ textarea[disabled] {
 
   &.secondary {
     background: #cf473e !important;
-    color: white !important;
 
     &:hover {
       background: #df5147 !important;
@@ -186,7 +187,6 @@ textarea[disabled] {
 }
 
 section {
-  min-width: 100vw;
   min-height: 100vh;
   width: 100%;
   height: max-content;
@@ -194,6 +194,7 @@ section {
   z-index: 1;
   background: var(--main-background);
   overflow: hidden;
+  margin: 0;
 
   &::before {
     content: "";
